@@ -5,8 +5,8 @@ use warnings;
 use autodie;
 use feature                 qw(say);
 use List::Util              qw(any);
-use Convert::Pheno::Default qw(get_defaults);
-use Convert::Pheno::Mapping;
+use Convert::Pheno::Utils::Default qw(get_defaults);
+use Convert::Pheno::Utils::Mapping;
 use Data::Dumper;
 use Scalar::Util qw(looks_like_number);
 use Hash::Util   qw(lock_keys);
